2010-01-19  Michael Wiegand <michael.wiegand@intevation.de>

	Post-release version bump.

	* VERSION: Set to 3.0.3.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2010-01-19  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the openvas-libraries 3.0.2 release.

	* CHANGES: Updated.

	* VERSION: Set to 3.0.2.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2010-01-14  Matthew Mundell <matthew.mundell@intevation.de>

	Add support for modifying the scanner configuration file.

	* base/settings.c (settings_init, settings_cleanup, settings_set)
	(settings_save, init_settings_iterator): New functions.
	(init_settings_iterator): Move key_file init to settings_init.
	(cleanup_settings_iterator): Call through to settings cleanup.
	(settings_iterator_next, settings_iterator_name): Rename iterator param.
	(settings_iterator_value): Get fields from settings.

	* base/settings.h: Update headers accordingly.  Make header style more
	standard.
	(settings_t): New type.
	(settings_iterator_t): Move file fields to settings_t and include a
	settings_t.

2010-01-13  Matthew Mundell <matthew.mundell@intevation.de>

	Switch to using GKeyFile to represent settings.  In the process hide
	this underlying type from the settings user.

	* base/settings.c (get_all_settings): Remove.
	(init_settings_iterator, cleanup_settings_iterator)
	(settings_iterator_next, settings_iterator_name)
	(settings_iterator_value): New functions.

	* base/settings.h: Update headers accordingly.  Make header check
	symbol more unique.
	(settings_iterator_t): New type.

2010-01-11  Michael Wiegand <michael.wiegand@intevation.de>

	Post-release version bump.

	* VERSION: Set to 3.0.2.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2010-01-11  Michael Wiegand <michael.wiegand@intevation.de>

	Committed VERSION file missing from the last commit.

	* VERSION: Set to 3.0.1.

2010-01-11  Michael Wiegand <michael.wiegand@intevation.de>
