@@ -1,3 +1,15 @@
+2010-01-25  Felix Wolfsteller <felix.wolfsteller@intevation.de>
+
+	Added functionality to print an xml entity tree to a string.
+
+	* omp/xml.c (free_entity): Tiny doc change.
+	(foreach_print_entity_to_string, foreach_print_attribute_to_string)
+	(print_entity_to_string, print_entities_to_string): New functions to
+	print an xml entity tree to string.
+
+	* omp/xml.h (print_entity_to_string, print_entitites_to_string): Protos
+	for new functions.
+
 2010-01-19  Michael Wiegand <michael.wiegand@intevation.de>
 
 	Post-release version bump.
